static/css/style.css
/* ... */
.brand-logo i {
  color: #424242;
  font-size: 2.6rem;
  margin-right: 5px;
  /* materialize looses line-height prop if window width <=600 */
  line-height: 56px;
}

.title-type {
  font-weight: 300;
  font-size: 0.7em;
}
.title-type:empty {
  opacity: 0;
}
.title-type + br + span:empty {
  opacity: 0;
}


body.page-start footer.page-footer {
  margin: 0;
}

input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
  background-color: inherit;
  background-image: none;
  color: inherit;
}

.text-right {
  text-align: right;
}

h1.line {
  border-bottom: 1px solid #ccc;
  padding-bottom: 30px;
}

a.disabled {
  color: #9F9FA7;
  cursor: default;
}


/* Components */

.alert {
  position: absolute;
  left: 50%;
  top: 75px;
  transform: translateX(-50%);
  z-index: 50;
  background-color: white;
  font-weight: 300;
  font-size: 1.2em;
  padding: 10px;
  border-radius: 2px;
  border: 1px solid;
}

.alert i {
  line-height: 23px;
  vertical-align: middle;
}

.alert i.alert-icon {
  position: absolute;
  background-color: #388E3C;
  color: #FFF;
  padding: 11px 7px 7px 7px;
  line-height: 100%;
  vertical-align: middle;
  left: 0;
  top: 0;
  bottom: 0;
}

.alert i.alert-hide {
  position: absolute;
  right: 10px;
  top: 12px;
  cursor: pointer;
}

.alert .message {
  margin-left: 40px;
  margin-right: 40px;
  letter-spacing: 0.5px;
}

.alert-error,
.alert-danger {
  color: #B71C1C;
}
.alert-error i.alert-icon,
.alert-danger i.alert-icon {
  background-color: #B71C1C;
}

.alert-warning {
  color: #F57C00;
}
.alert-warning i.alert-icon {
  background-color: #F57C00;
}

.alert-success {
  color: #388E3C;
}
.alert-success i.alert-icon {
  background-color: #388E3C;
}

.alert-info {
  color: #1976D2;
}
.alert-info i.alert-icon {
  background-color: #1976D2;
}

.sdf-badge {
  padding: 4px;
  font-size: 0.8rem;
  color: #fff;
  background-color: #26a69a;
  border-radius: 2px;
}

/* Twitter Bootstrap */

.collapse {
  display: none;
}
.collapse.in,
.collapsing {
  display: block;
}

/* MaterialCSS fixes */

.nav-fixed {
  position: fixed;
  width: 100%;
  z-index: 100;
}

.nav-fixed ul.navigation-bar > li > a {
    font-size: 0.95rem;
    padding: 0 8px;
}

#sidenav-overlay {
  z-index: 0;
}

.nav-fixed + main {
  margin-top: 84px;
}

.collection h4 .secondary-content {
  font-size: 0.5em;
}
.collection h4 .secondary-content.btn-flat {
  padding-right: 0;
}

.collection {
  overflow: visible; /* show dropdown menu */
}

.dropdown-content li > a,
.dropdown-content li > span {
  font-size: 1rem;
  text-transform: uppercase;
}

.input-field {
  min-height: 51px;
}
.input-field input {
  /* clickable label */
  position: relative;
  z-index: 1;
}
.input-field label {
  left: 0;
}
.file-field + label + label {
  z-index: -1; /* hide second label */
}
nav .input-field.search-field label {
  z-index: 0;
}
.input-field input[type="checkbox"] + label {
  z-index: 0;
}
nav .input-field.search-field label i {
  line-height: 45px;
}
.input-field input[type=search] {
  padding-left: 2.5rem;
  width: calc(100% - 2.5rem);
}
.input-field input[type=search]:focus {
  border: none;
  box-shadow: none;
}
nav .input-field.search-field input[type=search] {
  color: white;
  line-height: 45px;
  margin-top: 10px;
  margin-bottom: 3px;
}

#nav_ul_sort {
  margin-bottom: 30px;
  background-color: #FFA726;
  /* needs to be 100% width for better float breaks of child ul elems */
  width: 100%;

  border-right-width: 1px;
  border-left-width: 1px;

  overflow: hidden;
}

#nav_ul_sort > li {
  border-left: 1px solid rgba(0, 0, 0, 0.1);
  padding-left: 15px;
  float:right;
}
#nav_ul_sort > li:last-child {
  border-right: 1px solid rgba(0, 0, 0, 0.1);
}


.text-shadow {
    text-shadow: 0 1px 2px rgba(0,0,0,0.8);
}


.btn-flat {
  color: #26a69a;
}
.btn-danger {
  background-color: #D62F2F;
}
.btn-danger:hover {
  background-color: #E84F4F;
}
.btn-flat.btn-danger {
  background-color: transparent;
  color: #D62F2F;
}

.input-field.has-error label {
  color: #B71C1C;
}
.input-field.has-error input {
  border-bottom-color: #B71C1C;
}
.input-field.has-error .help-block {
  display: inline;
  position: relative;
  top: -9px;
  color: #b71c1c;
  font-size: 0.8rem;
}

.input-field .select-wrapper + label {
  position: absolute;
  top: -14px;
  font-size: 0.8rem;
}

.select-wrapper {
  padding-bottom: 1px; /* hack for following input-field */
}

.empty i {
  color: #ccc;
  font-size: 15em;
  text-align: center;
  width: 100%;
}
.empty p {
  text-align: center;
  color: #ccc;
  font-size: 1.5em;
  margin-top: 0;
}

.profile-img {
  line-height: 64px;
  vertical-align: middle;
  height: 32px;
  width: 32px;
  margin-right: 10px;
  border: 1px solid #ccc;
  border-radius: 100%;
  background-color: #FFF;
  padding: 2px;
  object-fit: cover;
}

.user-tag {
  display: inline-block;
  background-color: #EAEAEA;
  padding: 1px 9px 1px 1px;
  font-weight: bold;
  border-radius: 17px;
  line-height: 30px;
  height: 34px;
  color: rgba(0, 0, 0, 0.5);
  position: relative;
  top: -2px;
}
.user-tag:hover {
  background-color: #D8D8D8;
}
.user-tag:active {
  color: white;
  background-color: #26A69A;
}


/* Login */
.login-hint {
  border-radius: 3px;
  margin-top: 1em;
  margin-bottom: 2em;
  display: inline-block;
  padding: 20px;
  border: 1px solid #CCC;
  background-color: #F1F1F1;
}
.login-hint ul {
  margin: 10px 0;
}
.login-hint li {
  list-style-type: disc;
  margin-left: 18px;
}


/* highlights-box */
.flex-container {
  width: 100%;
  display: flex;
  flex-flow: row wrap;
  justify-content: left;
  align-items: stretch;
  align-content: stretch;
}

.page-start .flex-container
{
  justify-content: center;
}

.highlights-box-cell {
  position: relative;
  width: 11vw;
  height: 15vw;
  min-width: 115px;
  min-height: 145px;

  box-shadow: 0 2px 3px rgba(0,0,0,0.3);
  margin: 1vw;
  overflow: hidden;
  background: white center center;
  background-size: cover;
  color: white;
  text-align: center;
}
/* ... */

